--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,7 +20,7 @@
     <img src="../static/images/Tipos-MBTI.png"
          th:src="@{images/Tipos-MBTI.png}" alt="mbTypes" usemap="#TypeMap" />
     <map name="TypeMap" id="TypeMap">
-        <area alt="Test" href="/mbti/test/questions" shape="rect" coords="303,309,440,446" />
+        <area alt="Test" href="/mbti/test/form" shape="rect" coords="303,309,440,446" />
 
         <area alt="Guardian" href="mbti/Guardian" shape="rect" coords="345,190,409,241" />
         <area alt="ISTJ" href="mbti/guardians/ISTJ" shape="rect" coords="216,160,253,189" />
