--- a/src/main/resources/templates/mbti/test/questions.html
+++ b/src/main/resources/templates/mbti/test/questions.html
@@ -27,20 +27,20 @@
             <legend>Please answer the following questions:</legend>
             <div>
                 <p><b>Question 1</b> Q1</p>
-                <input type="radio" id="r1" name="q1" value="E" style="border: none;">Yes</input>
-                <input type="radio" id="r2" name="q1" value="I" style="border: none;">No</input>
+                <input onclick="doEorI()" type="radio" id="r1" name="q1" value="E" style="border: none;">Yes</input>
+                <input onclick="doEorI()" type="radio" id="r2" name="q1" value="I" style="border: none;">No</input>
                 <p><b>Question 2</b> Q2</p>
-                <input type="radio" id="r3" name="q2" value="E" style="border: none;">Yes</input>
-                <input type="radio" id="r4" name="q2" value="I" style="border: none;">No</input>
+                <input onclick="doEorI()" type="radio" id="r3" name="q2" value="E" style="border: none;">Yes</input>
+                <input onclick="doEorI()" type="radio" id="r4" name="q2" value="I" style="border: none;">No</input>
                 <p><b>Question 3</b> Q3</p>
-                <input type="radio" id="r5" name="q3" value="E" style="border: none;">Yes</input>
-                <input type="radio" id="r6" name="q3" value="I" style="border: none;">No</input>
+                <input onclick="doEorI()" type="radio" id="r5" name="q3" value="E" style="border: none;">Yes</input>
+                <input onclick="doEorI()" type="radio" id="r6" name="q3" value="I" style="border: none;">No</input>
                 <p><b>Question 4</b> Q4</p>
-                <input type="radio" id="r7" name="q4" value="I" style="border: none;">Yes</input>
-                <input type="radio" id="r8" name="q4" value="E" style="border: none;">No</input>
+                <input onclick="doEorI()" type="radio" id="r7" name="q4" value="I" style="border: none;">Yes</input>
+                <input onclick="doEorI()" type="radio" id="r8" name="q4" value="E" style="border: none;">No</input>
                 <p><b>Question 5</b> Q5</p>
-                <input type="radio" id="r9" name="q5" value="I" style="border: none;">Yes</input>
-                <input type="radio" id="r10" name="q5" value="E" style="border: none;">No</input>
+                <input onclick="doEorI()" type="radio" id="r9" name="q5" value="I" style="border: none;">Yes</input>
+                <input onclick="doEorI()" type="radio" id="r10" name="q5" value="E" style="border: none;">No</input>
             </div>
             <input type="button" id="button" value="getResults"/>
         </fieldset>
