--- a/src/main/resources/templates/mbti/test/form.html
+++ b/src/main/resources/templates/mbti/test/form.html
@@ -33,61 +33,61 @@
                 <p>I enjoy being around people that are exciting rather then boring-</p>
                 <input  type="radio" id="r3" name="q2" value="E" style="border: none;">Yes</input>
                 <input  type="radio" id="r4" name="q2" value="I" style="border: none;">No</input>
-                <p>I appreciate acknowledgment for a job well done-</p>
-                <input  type="radio" id="r5" name="q3" value="E" style="border: none;">Yes</input>
-                <input  type="radio" id="r6" name="q3" value="I" style="border: none;">No</input>
-                <p>I am a capable and self efficient person, I know what I want and why-</p>
+                <p>I have a rich and creative imagination that can keep me entertained-</p>
+                <input  type="radio" id="r5" name="q3" value="I" style="border: none;">Yes</input>
+                <input  type="radio" id="r6" name="q3" value="E" style="border: none;">No</input>
+                <p>I am a capable and self efficient person, I know what I want and why, I am invested in myself-</p>
                 <input  type="radio" id="r7" name="q4" value="I" style="border: none;">Yes</input>
                 <input  type="radio" id="r8" name="q4" value="E" style="border: none;">No</input>
-                <p>I am able to separate mental state from my physical environment-</p>
+                <p>I am able to separate mental state from my physical environment and can stay objective even under stress-</p>
                 <input  type="radio" id="r9" name="q5" value="I" style="border: none;">Yes</input>
                 <input  type="radio" id="r10" name="q5" value="E" style="border: none;">No</input>
 
-                <p>I pay attention to immediate data from my five senses-</p>
+                <p>I pay full attention to immediate data from my five senses-</p>
                 <input type="radio" id="r11" name="q6" value="S" style="border: none;">Yes</input>
                 <input type="radio" id="r12" name="q6" value="N" style="border: none;">No</input>
-                <p>I stick to tried and true courses of action, I know what works-</p>
+                <p>I stick to tried and true courses of action, I know what works and I feel a need to be inventive-</p>
                 <input type="radio" id="r13" name="q7" value="S" style="border: none;">Yes</input>
                 <input type="radio" id="r14" name="q7" value="N" style="border: none;">No</input>
-                <p>I am very observant of my surroundings-</p>
+                <p>I am very observant of my surroundings and am rarely caught off guard-</p>
                 <input type="radio" id="r15" name="q8" value="S" style="border: none;">Yes</input>
                 <input type="radio" id="r16" name="q8" value="N" style="border: none;">No</input>
-                <p>I am a very abstract thinker, I like to see the possibilities-</p>
+                <p>I am a very abstract thinker, I like to see all the possibilities and don't get hung up on all the little deals-</p>
                 <input type="radio" id="r17" name="q9" value="N" style="border: none;">Yes</input>
                 <input type="radio" id="r18" name="q9" value="S" style="border: none;">No</input>
-                <p>I am good at spotting big picture patterns, my focus is on the future-</p>
+                <p>I am good at spotting big picture patterns, my focus is on the future, I have no contentions with my past-</p>
                 <input type="radio" id="r19" name="q10" value="N" style="border: none;">Yes</input>
                 <input type="radio" id="r20" name="q10" value="S" style="border: none;">No</input>
 
-                <p>I prefer dealing with things that are concise and can be properly defined-</p>
+                <p>I prefer instructions that are brief and concise-</p>
                 <input type="radio" id="r21" name="q11" value="T" style="border: none;">Yes</input>
                 <input type="radio" id="r22" name="q11" value="F" style="border: none;">No</input>
-                <p>I judge situations based off of what is important to me at the time-</p>
+                <p>I judge others based on their ability to remain objective, rational and to the point-</p>
                 <input type="radio" id="r23" name="q12" value="T" style="border: none;">Yes</input>
                 <input type="radio" id="r24" name="q12" value="F" style="border: none;">No</input>
-                <p>I judge others based on their ability to remain objective and rational-</p>
-                <input type="radio" id="r25" name="q13" value="T" style="border: none;">Yes</input>
-                <input type="radio" id="r26" name="q13" value="F" style="border: none;">No</input>
-                <p>I understand emotions and have a moral obligation to the make decisions I feel are right-</p>
+                <p>I am a very fluid thinker, I believe that diversity and individuality are an asset to humanity-</p>
+                <input type="radio" id="r25" name="q13" value="F" style="border: none;">Yes</input>
+                <input type="radio" id="r26" name="q13" value="T" style="border: none;">No</input>
+                <p>I understand emotions extremely well and feel I have a moral obligation to the make decisions that are aligned to the needs of others-</p>
                 <input type="radio" id="r27" name="q14" value="F" style="border: none;">Yes</input>
                 <input type="radio" id="r28" name="q14" value="T" style="border: none;">No</input>
-                <p>I am a very fluid thinker, I believe value can be found in diversity-</p>
+                <p>I don't feel there is a single right or wrong answer, even in science, since everyone has a different perspective on life.</p>
                 <input type="radio" id="r29" name="q15" value="F" style="border: none;">Yes</input>
                 <input type="radio" id="r30" name="q15" value="T" style="border: none;">No</input>
 
-                <p>I like to keep my options as open as possible for as long as possible-</p>
+                <p>I like to keep my options as open as possible for as long as possible, this gives me a sense of control-</p>
                 <input type="radio" id="r31" name="q16" value="P" style="border: none;">Yes</input>
                 <input type="radio" id="r32" name="q16" value="J" style="border: none;">No</input>
-                <p>I love debate-</p>
+                <p>I sometimes put off making decisions far longer then I should, I prefer exploring problems and situations to resolving them personally-</p>
                 <input type="radio" id="r33" name="q17" value="P" style="border: none;">Yes</input>
                 <input type="radio" id="r34" name="q17" value="J" style="border: none;">No</input>
-                <p>I tend to go with the flow and enjoy the ride-</p>
-                <input type="radio" id="r35" name="q18" value="P" style="border: none;">Yes</input>
-                <input type="radio" id="r36" name="q18" value="J" style="border: none;">No</input>
-                <p>I do not tend to yield to the advice of others, I often find it to be misguided-</p>
+                <p>I acknowledge the need for closure and limited time schedules, I don't tend to take many breaks and I won't walk away from a task until it is complete-</p>
+                <input type="radio" id="r35" name="q18" value="J" style="border: none;">Yes</input>
+                <input type="radio" id="r36" name="q18" value="P" style="border: none;">No</input>
+                <p>I do not tend to yield to the advice of others, I often find it to be misguided and irrelevant to the situation at hand-</p>
                 <input type="radio" id="r37" name="q19" value="J" style="border: none;">Yes</input>
                 <input type="radio" id="r38" name="q19" value="P" style="border: none;">No</input>
-                <p>When it comes to my life I consider myself to be responsible for all of my actions-</p>
+                <p>I find it imposable to pass blame on others, I believe that I am the only solution to my problems-</p>
                 <input type="radio" id="r39" name="q20" value="J" style="border: none;">Yes</input>
                 <input type="radio" id="r40" name="q20" value="P" style="border: none;">No</input>
                 <br/>
