--- a/src/main/resources/templates/mbti/test/form.html
+++ b/src/main/resources/templates/mbti/test/form.html
@@ -46,7 +46,7 @@
                 <p>I pay full attention to immediate data from my five senses-</p>
                 <input type="radio" id="r11" name="q6" value="S" style="border: none;">Yes</input>
                 <input type="radio" id="r12" name="q6" value="N" style="border: none;">No</input>
-                <p>I stick to tried and true courses of action, I know what works and I feel a need to be inventive-</p>
+                <p>I stick to tried and true courses of action, I know what works and I feel no need to be inventive-</p>
                 <input type="radio" id="r13" name="q7" value="S" style="border: none;">Yes</input>
                 <input type="radio" id="r14" name="q7" value="N" style="border: none;">No</input>
                 <p>I am very observant of my surroundings and am rarely caught off guard-</p>
